welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: value =! is not a member of Int
while (2*biscuit =! caseOrange + 1){
                 ^